Re-factoring GooglePlacesService

--- a/ExploreApp/appsettings.json
+++ b/ExploreApp/appsettings.json
@@ -9,5 +9,9 @@
     }
   },
   "AllowedHosts": "*",
-  "GoogleAPIKey": ""
+  "GoogleAPI": {
+    "APIKey": "AIzaSyBIVUFIQqOKQWIHyajMJ7GrKOfu8DGCvLc",
+    "TextSearch": "places.displayName,places.primaryTypeDisplayName,places.priceLevel,places.photos",
+    "NearbySearch": "places.displayName,places.primaryTypeDisplayName,places.photos"
+  }
 }
