--- a/ExploreApp/appsettings.json
+++ b/ExploreApp/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "GoogleAPI": {
-    "APIKey": "",
+    "APIKey": "AIzaSyBiLBfYuUFqyrQ608a3qns34SqfEiQ6o9E",
     "TextSearch": "places.displayName,places.primaryTypeDisplayName,places.priceLevel,places.photos",
     "NearbySearch": "places.displayName,places.primaryTypeDisplayName,places.photos"
   }
